Fix of some bugs related to blocks, and alignment

--- a/p5js/style.css
+++ b/p5js/style.css
@@ -18,7 +18,7 @@ div {
 #column1 {
     padding: 10px 0;
     height: 96vh;
-    width: 33.5vh;
+    width: 30vh;
     background-color: #000000;
     display: flex;
     flex-direction: column;
